@@ -1,0 +1,287 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u570b\u6587\u5b78\u53f2\u4e0a\u91cc\u7a0b\u7891\uff01\u97d3\u6c5f\u596a\u5f97\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff0c\u9996\u4f4d\u4e9e\u6d32\u5973\u6027\u5f97\u4e3b", "description": "\u97d3\u570b\u6587\u5b78\u53f2\u4e0a\u91cc\u7a0b\u7891\uff01\u97d3\u6c5f\u596a\u5f97\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff0c\u9996\u4f4d\u4e9e\u6d32\u5973\u6027\u5f97\u4e3b", "url": "https://www.famechos.me/news/\u97d3\u570b\u6587\u5b78\u53f2\u4e0a\u91cc\u7a0b\u7891\uff01\u97d3\u6c5f\u596a\u5f97\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff0c\u9996\u4f4d\u4e9e\u6d32\u5973\u6027\u5f97\u4e3b.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T14:30:54.818459+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主.html"/>
+<meta name="description" content="韓國文學史上重大突破！韓江奪得諾貝爾文學獎，成為首位亞洲女性得主，震驚文壇。">
+
+<meta name="keywords" content="韓江，諾貝爾文學獎，韓國文學，亞洲女性作家，文學史">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主.html" />
+        <meta property="og:title" content="韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主" />
+        <meta property="og:description" content="韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主" />
+        <meta property="twitter:description" content="韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>韓國作家韓江獲得諾貝爾文學獎，成為首位獲得該獎項的韓國人。這一意外的榮譽令韓國人歡欣鼓舞，並使一些主要書店的網站一度癱瘓，因為人們爭相購買她的書籍。</p>
+<p>瑞典學院肯定了韓江的“濃郁的詩意散文，直面歷史創傷，揭示人類生命的脆弱”。她是首位亞洲女性諾貝爾文學獎得主，也是繼前總統金大中之後第二位獲得諾貝爾獎的韓國人。</p>
+<p>諾貝爾委員會表示，韓江在她的作品中直面歷史創傷，在每一部作品中揭示人類生命的脆弱。她對身體和靈魂、生者和死者之間的聯繫有著獨特的認識，以詩意和實驗性的風格，成為當代散文的創新者。</p>
+<p>韓江在接受諾貝爾獎委員會電話採訪時表示，她“非常驚訝”和“榮幸”。她提到她一直以來的寫作靈感源自她讀過的所有書籍。</p>
+<p>對於第一次閱讀她的作品的讀者，她推薦她的最新小說《我們不分離》，以及《人類行為》，她指出這兩部作品密切相關。</p>
+<p>每個諾貝爾獎的獎金為1100萬瑞典克朗（約合110萬美元）。韓江的獲獎對韓國文學界和讀者來說是一個重要的里程碑。</p><div>
+<p>瑞典學院獎項涵蓋文學、科學、醫學、經濟學和和平等領域。這些獎項由瑞典科學家和企業家阿爾弗雷德·諾貝爾的遺囑創立，自1901年起頒發，經濟學獎是後來新增的。</p>
+<p>韓江曾於2016年憑藉《素食者》獲得布克國際獎，今天的諾貝爾獎將使她進一步躋身國際文壇。</p>
+<p>韓國人在今天晚上為韓江的歷史性勝利而歡欣鼓舞，許多人表示這是一個意外的驚喜。</p>
+<p>一位大學生表示，她在聽到直播廣播宣布韓江獲獎後，立即趕到首爾的一家書店購買她的書籍。她原本以為獲獎者可能是中國或日本作家，所以她真的很自豪。</p>
+<p>總統尹錫悅在老撾出席東南亞國家協會峰會期間向韓江表示祝賀。</p>
+<p></div></p>
+<h2>諾貝爾文學獎花落韓國作家韓江</h2>
+<p>韓國作家韓江獲得諾貝爾文學獎，是韓國文學史上的里程碑事件，亦是全國人民的喜事。韓國總統尹錫悅在Facebook上留言，對韓江的成就表示讚賞。</p>
+<p>韓江的獲獎消息令她的作品需求急增，包括《素食者》等書籍。韓國兩大網上書店教保文庫和Yes24的網站因流量過大而崩潰，韓江的書籍占據了兩個網站的實時暢銷書排名，但截至週四晚上，大部分書籍已經售罄。</p>
+<p>韓江於1970年出生於韓國西南部城市光州，後來搬到首爾，並畢業於延世大學，主修韓國語言和文學。她於1993年開始她的文學生涯，發表詩歌於季刊《文學與社會》。次年，她憑藉短篇小說《紅錨》贏得首爾新聞日報主辦的文學比賽，正式出道成為小說家。</p>
+<p>韓江以創造獨特的文學世界而受到讚譽，探索普遍的人類問題，如死亡和暴力，通過詩意和抒情的風格。她曾給予虛構形式的現代韓國歷史的深刻黑暗和傷口，通過小說如《人類行為》（2014），描述1980年光州民主化運動，和《我們不分離》（2021），描述濟州四·三事件的悲劇，透過三個女性的視角。</p>
+<p>韓江的其他著名作品包括：</p>
+<ul>
+<li>《麗水》</li>
+<li>《我的女人之果》</li>
+<li>《你的冷手》</li>
+<li>《黑鹿》</li>
+<li>《風吹》</li>
+<li>《希臘課程》</li>
+</ul>
+<p>過往的諾貝爾文學獎得主包括美國小說家歐內斯特·海明威、英國作家魯德亞德·吉卜林、愛爾蘭劇作家蕭伯納、法國作家阿爾伯特·卡繆和哥倫比亞小說家加夫列爾·加西亞·馬奇斯。2016年，美國歌手兼作曲家Bob Dylan成為第一位音樂家贏得該獎項。諾貝爾獎頒獎典禮於每年12月10日在瑞典首都斯德哥爾摩音樂廳舉行，紀念阿爾弗雷德·諾貝爾逝世周年。</p>
+<p>根據您的要求，我處理了文章內容。以下是處理好的中文HTML結構：</p>
+<h2>據朝鮮中央通訊社報導，首爾被指派無人機飛越平壤</h2>
+<p>根據朝鮮中央通訊社的報導，首爾被指派無人機飛越平壤。報導稱，這是韓國對朝鮮的挑釁行為。</p>
+<h2>國家安全顧問：韓美日峰會預計於2024年底召開</h2>
+<p>國家安全顧問表示，韓美日峰會預計於2024年底舉行。峰會將討論三國之間的合作與安全問題。</p>
+<p>請注意，我已經刪除不必要的內容，改寫了原文句式，並增加了HTML元素來協助描述。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵.html">韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/震驚！韓國小說家女兒獲諾貝爾文學獎，父親韓勝源：像整個世界都被顛倒了.html">震驚！韓國小說家女兒獲諾貝爾文學獎，父親韓勝源：像整個世界都被顛倒了</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任.html">杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
