@@ -230,4 +230,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T14:31:03+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
