@@ -34,3 +34,4 @@ https://en.yna.co.kr/view/AEN20241011008400315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011007900315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011003000315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241012001000315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241011012200320?section=culture/k-pop&input=rss
